--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                   <input type="text" onChange={this.updateDillutionUnit} placeholder="beer, Iso., etc."/>
                   <div>
                     <div>
-                    Current Concentration: <span id="question-mark">?</span> <input type="number" onChange={this.updateC1} placeholder="5"/>
+                    Current Concentration: <input type="number" onChange={this.updateC1} placeholder="5"/>
                     Final Concentration: <input type="number" onChange={this.updateC2} placeholder="6"/>
                     </div>
                     <div>
